Fix truncating long headings related issue
Do not truncate long headings if the width of the browser viewport
is small (which is the case with mobile devices with smaller screens),
as that creates a bad user experience.

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

Fix npm/newww#1114

--- a/assets/styles/markdown.styl
+++ b/assets/styles/markdown.styl
@@ -7,6 +7,7 @@
     text-align left
     line-height 1.2
     @extend .ellipsis
+    white-space: normal
     overflow-y hidden
     text-transform none
     a
